# ChangeLog for dev-perl/XML-DT
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-DT/ChangeLog,v 1.69 2010/11/22 17:45:41 tove Exp $

*XML-DT-0.54 (22 Nov 2010)

  22 Nov 2010; Torsten Veller <tove@gentoo.org> +XML-DT-0.54.ebuild:
  Version bump

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -XML-DT-0.51.ebuild,
  -XML-DT-0.52.ebuild:
  Cleanup

*XML-DT-0.53 (19 Jan 2009)

  19 Jan 2009; Torsten Veller <tove@gentoo.org> +XML-DT-0.53.ebuild:
  Version bump

*XML-DT-0.52 (23 Oct 2008)

  23 Oct 2008; Torsten Veller <tove@gentoo.org> +XML-DT-0.52.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -XML-DT-0.42.ebuild,
  -XML-DT-0.45.ebuild, -XML-DT-0.46.ebuild:
  Cleanup

*XML-DT-0.51 (28 Apr 2008)

  28 Apr 2008; Yuval Yaari <yuval@gentoo.org> +XML-DT-0.51.ebuild:
  Version bump

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> XML-DT-0.47.ebuild:
  Stable for HPPA too.

  27 Aug 2007; Raúl Porcel <armin76@gentoo.org> XML-DT-0.47.ebuild:
  alpha stable

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> XML-DT-0.47.ebuild:
  Re-add ~alpha

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> XML-DT-0.47.ebuild:
  ppc stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> XML-DT-0.47.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> XML-DT-0.47.ebuild:
  Stable on IA64.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org> XML-DT-0.47.ebuild:
  Marking sparc stable

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org> XML-DT-0.47.ebuild:
  marking amd64 stable

*XML-DT-0.47 (29 Nov 2006)

  29 Nov 2006; Yuval Yaari <yuval@gentoo.org> +XML-DT-0.47.ebuild:
  Version bump

*XML-DT-0.46 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org> +XML-DT-0.46.ebuild:
  Version bump

  16 Oct 2006; Michael Cummings <mcummings@gentoo.org> -XML-DT-0.20.ebuild,
  -XML-DT-0.20-r1.ebuild, -XML-DT-0.24.1.ebuild, -XML-DT-0.30.ebuild,