@@ -4,15 +4,17 @@ Hash: SHA1
 DIST XML-DT-0.47.tar.gz 28852 RMD160 f160a3bfe09a8656d194447ec46a0afc50b880f4 SHA1 10b37c7b8553940429554d58f67c14c364d32ff7 SHA256 bd41fde1cee0da64a8274911e40a21848f97964f39466aa064d137164b59cbaf
 DIST XML-DT-0.53.tar.gz 29498 RMD160 3152c69ba476353465935a150690c932e8925c73 SHA1 d5ea345498e7568ec809331d8ff3a933ecd301d6 SHA256 582457266723369df73f6eeff6512838ebee5aa294135f68518ecd409866c9ea
 DIST XML-DT-0.54.tar.gz 29526 RMD160 1f6f4586ae16d39fd3b7778e93bc0ee844ec3f02 SHA1 e48cf2753f2fc007b4fbf64a8317440fef6daaf5 SHA256 b0136da10b389b26152030ac27b2e270d759c5ae3058ffd9ea5d7dc0babf9b08
+DIST XML-DT-0.56.tar.gz 29322 RMD160 de98ba7adf9dee9bdceea9d053e75b40d77d511b SHA1 0d003cb67a843dfa2211ef7f88c13725a14d2d46 SHA256 aa2060fffd4505dd87fd028b59af147cc75394a899c3c01ca077945fd327bb09
 EBUILD XML-DT-0.47.ebuild 728 RMD160 d92a7735c863d0088b450dbd686df04feeec5ca7 SHA1 d0795affe37bf26b94e3c8471f6f386b8afe7d83 SHA256 8cdd32d38f3fc0d678e1ccccd18e2ddadac9e872ec954e8ad90773a372cba517
 EBUILD XML-DT-0.53.ebuild 635 RMD160 918a953177e43fa027689f8fb3d3eaff1c441452 SHA1 90397f11b881f674e20f38b3b4a7e24d4e37f03d SHA256 d00b418f64ebce5db6d5c55a0249f6a1c92687c82b0c6dd25b6198a2390dd995
 EBUILD XML-DT-0.54.ebuild 635 RMD160 d49259c84694e0d0e302d2cb25d51eb332465e32 SHA1 50a8252e24fd32c00a043481dcf1c873fda36a76 SHA256 b065f86d972297d7abd7c176c523114c6f79adb3cac664a3b95c54e049bb158a
-MISC ChangeLog 8807 RMD160 db1d91e3304f35c56b65409d7ba95f7ec25af5d2 SHA1 afb871bbaf04d1e04d10ae6a90542ffbeee6e740 SHA256 02a65892b2e1a6bc32526d6e0788d377e3616e67975a725edf97bb31aabc31ef
+EBUILD XML-DT-0.560.ebuild 617 RMD160 9c66708fbdbfe303bb576e44051cb148df999625 SHA1 47ed8e16cc44469ae1420abdec0d633919b6afa6 SHA256 7724c5305effacdc4763c9601a0d8d69e9ffa6971262a2fbe08a00d79e36dd72
+MISC ChangeLog 8922 RMD160 14ed601c8e68a1450d1be8597c46b47050354e73 SHA1 1123aa911647f5c29105d72cce5c5a592a57cb85 SHA256 8219ff448bc78ccb4ff1925543243f9c537b38f60a6ad461ba07aa2ece79e8d0
 MISC metadata.xml 232 RMD160 c5a72b8d450aba79c6d247a174a5e025426c2631 SHA1 c07e2b4e7f9c7fea471501aa5e420156c5da3d86 SHA256 f675746312120fd88f74a9c90c32b7eb14f173b0bbcd8488ec8a9874bc4c5e14
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAkzqrEsACgkQV3J2n04Eauze7ACgtY6gT4a1rVbkSZjQD5vUNPhL
-82kAn0sy0pAqB61scM831a6A2qix3OEw
-=QkG+
+iEYEARECAAYFAk1XncAACgkQV3J2n04EauwuLgCfQlnDCL/BxYtmh8bi8QwD8qDz
+o9MAn0tvSxWKzAhZ5EnDqUkJkUoQQ4oL
+=XAd+
 -----END PGP SIGNATURE-----
