@@ -1,0 +1,25 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-DT/XML-DT-0.560.ebuild,v 1.1 2011/02/13 09:00:42 tove Exp $
+
+EAPI=3
+
+MODULE_AUTHOR=AMBS
+MODULE_SECTION=XML
+MODULE_VERSION=0.56
+inherit perl-module
+
+DESCRIPTION="A perl XML down translate module"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~sparc ~x86"
+IUSE="test"
+
+RDEPEND=">=dev-perl/libwww-perl-1.35
+	>=dev-perl/XML-LibXML-1.60
+	>=dev-perl/XML-DTDParser-2.00"
+DEPEND="${RDEPEND}
+	test? ( dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage )"
+
+SRC_TEST="do"
