@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/XML-DT
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-DT/ChangeLog,v 1.69 2010/11/22 17:45:41 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-DT/ChangeLog,v 1.70 2011/02/13 09:00:42 tove Exp $
+
+*XML-DT-0.560 (13 Feb 2011)
+
+  13 Feb 2011; Torsten Veller <tove@gentoo.org> +XML-DT-0.560.ebuild:
+  Version bump
 
 *XML-DT-0.54 (22 Nov 2010)
 
